<resources>
    <string name="app_name">Bocchi the Rock!</string>
    <string name="splash">by xsat93</string>
    <string name="myname">Satrio Mukti Prayoga</string>
    <string name="myemail">youremail123@domain.com</string>
    <string-array name="char_name">
        <item>Hitori Gotoh</item>
        <item>Ikuyo Kita</item>
        <item>Nijika Ijichi</item>
        <item>Ryo Yamada</item>
        <item>Seika Ijichi</item>
        <item>Kikuri Hiroi</item>
        <item>Shima Iwashita</item>
        <item>Eliza Shimizu</item>
        <item>PA-san</item>
        <item>Ginjiro Yoshida</item>
        <item>Futari Gotoh</item>
        <item>Michiyo Gotoh</item>
        <item>Naoki Gotoh</item>
    </string-array>
    <string name="description">Character Description</string>
    <string name="synop">Synopsis</string>
    <string name="age">Age : %1$s</string>
    <string name="gender">Gender : %1$s</string>
    <string name="synopsis">This application was created to introduce the characters in the anime Bocchi the Rock!\n\nSynopsis :\nYearning to make friends and perform live with a band, lonely and socially anxious Hitori "Bocchi" Gotou devotes her time to playing the guitar. On a fateful day, Bocchi meets the outgoing drummer Nijika Ijichi, who invites her to join Kessoku Band when their guitarist, Ikuyo Kita, flees before their first show. Soon after, Bocchi meets his final bandmate—the cool bassist Ryou Yamada.\n\nAlthough their first performance together was subpar, the girls felt empowered by their shared love for music, and they were soon rejoined by Kita. Finding happiness in performing, Bocchi and his bandmates put their hearts into improving as musicians while making the most of their fleeting high school days.\n\nThe source of information in this application comes from the website https://bocchi-the-rock.fandom.com/ and https://myanimelist.net/anime/47917/Bocchi_the_Rock \n\nThis application was created to complete final submission of \"Learning Path 2 Android Developer\" at www.dicoding.com, entitled \"Belajar Membuat Aplikasi Android untuk Pemula\".</string>
    <string name="desc_back">Go Back</string>
    <string name="desc_about">About Button</string>
    <string name="desc_icon">Icon Toolbar</string>
    <string name="desc_logo_splash">Logo Splash</string>
    <string name="desc_photo">Photo</string>
    <string name="desc_share">Share Button</string>
    <string-array name="data_gender">
        <item>Female</item>
        <item>Female</item>
        <item>Female</item>
        <item>Female</item>
        <item>Female</item>
        <item>Female</item>
        <item>Female</item>
        <item>Female</item>
        <item>Female</item>
        <item>Female</item>
        <item>Female</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="data_age">
        <item>15</item>
        <item>16</item>
        <item>16</item>
        <item>16</item>
        <item>29</item>
        <item>25</item>
        <item>25</item>
        <item>21</item>
        <item>24</item>
        <item>37</item>
        <item>5</item>
        <item>Unknown</item>
        <item>Unknown</item>
    </string-array>
</resources>