<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:background="?attr/colorPrimary"
            app:contentInsetEnd="24dp"
            app:contentInsetStart="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="top|start"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_back"
                android:onClick="onBackPressed"
                android:scaleType="centerInside"
                android:src="@drawable/icon_back"
                tools:ignore="ImageContrastCheck,UsingOnClickInXml,TouchTargetSizeCheck"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="17dp" />

            <ImageView
                android:id="@+id/customIcon"
                android:layout_width="185dp"
                android:layout_height="60dp"
                android:layout_gravity="top|center"
                android:rotation="6"
                android:src="@drawable/ico_toolbar"
                tools:ignore="ImageContrastCheck"
                tools:layout_editor_absoluteX="81dp"
                tools:layout_editor_absoluteY="2dp"
                android:contentDescription="@string/desc_icon" />

            <ImageButton
                android:id="@+id/action_share"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="top|end"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/desc_share"
                android:onClick="onShareClicked"
                android:scaleType="centerInside"
                android:src="@drawable/icon_share"
                tools:ignore="ImageContrastCheck,RedundantDescriptionCheck,UsingOnClickInXml,TouchTargetSizeCheck"
                tools:layout_editor_absoluteX="362dp"
                tools:layout_editor_absoluteY="19dp" />

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/iv_detail_photo"
            android:layout_width="200dp"
            android:layout_height="270dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/desc_photo" />


        <TextView
            android:id="@+id/tv_detail_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/age"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

        <TextView
            android:id="@+id/tv_detail_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/gender"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_age" />

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/char_name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_photo" />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/description"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_gender" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
